completed shopping cart database interaction

--- a/public/app/directives/footer/footer.html
+++ b/public/app/directives/footer/footer.html
@@ -1,36 +1,36 @@
 <div class="footerContainer">
 <ul>
-  <li class="footerTitle">Company</li>
-  <li class="footerlinks">Contact Us</li>
-  <li class="footerlinks">Press</li>
-  <li class="footerlinks">Careers</li>
-  <li class="footerlinks">Terms and Conditions</li>
-  <li class="footerlinks">Privacy Policy</li>
+  <li class="footerTitle" >Company</li>
+  <a href="https://support.boostedboards.com/hc/en-us/articles/115001298027"><li class="footerlinks">Contact Us</li></a>
+  <a href="https://boostedboards.com/press/"><li class="footerlinks">Press</li></a>
+  <a href="https://boostedboards.com/careers/"><li class="footerlinks">Careers</li></a>
+  <a href="https://boostedboards.com/terms-and-conditions/"><li class="footerlinks">Terms and Conditions</li></a>
+  <a href="https://boostedboards.com/privacy/"><li class="footerlinks">Privacy Policy</li></a>
 </ul>
 <ul>
   <li class="footerTitle">Explore</li>
-  <li class="footerlinks">Forum</li>
-  <li class="footerlinks">Community</li>
-  <li class="footerlinks">Reviews</li>
-  <li class="footerlinks">Videos</li>
+  <a href="https://www.reddit.com/r/boostedboards/"><li class="footerlinks">Forum</li></a>
+  <a ui-sref="community"><li class="footerlinks">Community</li></a>
+  <a href="https://boostedboards.com/reviews/"><li class="footerlinks">Reviews</li></a>
+  <a href="https://www.youtube.com/user/BoostedCommunity"><li class="footerlinks">Videos</li></a>
 </ul>
 <ul>
   <li class="footerTitle">Orders</li>
-  <li class="footerlinks">Battery Pack Recall</li>
-  <li class="footerlinks">The Board</li>
-  <li class="footerlinks">Store</li>
-  <li class="footerlinks">Support</li>
+  <a href="https://boostedboards.com/battery-pack-recall/"><li class="footerlinks">Battery Pack Recall</li></a>
+  <a ui-sref="board"><li class="footerlinks">The Board</li></a>
+  <a ui-sref="store"><li class="footerlinks">Store</li></a>
+  <a href="https://support.boostedboards.com/hc/en-us"><li class="footerlinks">Support</li></a>
 </ul>
 <div class="footerTitle"><div class="spacingfooter">Subscribe to our Newsletter</div>
   <div class='inputInfoFooter'>
-  <input type="text" class='newsletter'placeholder=" email address" name="" value="">
-  <button type="button" class="whiteButton shortButton blackButton" id='subscribeButton'name="button">SUBSCRIBE</button>
+  <input type="text" class='newsletter'placeholder=" email address" ng-model='emailsub' value="">
+  <button type="button" class="whiteButton shortButton blackButton" ng-click='addEmail(emailsub)' id='subscribeButton'name="button">SUBSCRIBE</button>
 </div>
 </div>
 </div>
 <div class="footerSocial">
-  <div class="footerIcon"><img class='photo' src="../../img/homePage/facebook.PNG" alt=""></div>
-  <div class="footerIcon"><img class='photo' src="../../img/homePage/twitter.PNG" alt=""></div>
-  <div class="footerIcon"><img class='photo' src="../../img/homePage/youtube.PNG" alt=""></div>
-  <div class="footerIcon"><img class='photo' src="../../img/homePage/instagram.PNG" alt=""></div>
+  <a href="https://www.facebook.com/boostedboards"><div class="footerIcon"><img class='photo' src="../../img/homePage/facebook.PNG" alt=""></div></a>
+  <a href="https://twitter.com/boostedboards"><div class="footerIcon"><img class='photo' src="../../img/homePage/twitter.PNG" alt=""></div></a>
+  <a href="https://www.youtube.com/user/BoostedCommunity"><div class="footerIcon"><img class='photo' src="../../img/homePage/youtube.PNG" alt=""></div></a>
+  <a href="https://www.instagram.com/boostedboards/"><div class="footerIcon"><img class='photo' src="../../img/homePage/instagram.PNG" alt=""></div></a>
 </div>
