--- a/public/app/directives/guarantee/guarantee.html
+++ b/public/app/directives/guarantee/guarantee.html
@@ -7,7 +7,7 @@
 Ride hard and put the board to the test. If you don’t love your Boosted board, we’ll
 gladly take it back for a full refund.
   </div>
-  <button type="button" class='orangeButton' name="button">RESERVE NOW</button>
+  <button type="button" class='orangeButton' ui-sref='reserve' name="button">RESERVE NOW</button>
 </div>
 </div>
 <div class="threeGuarantee">
@@ -23,7 +23,7 @@ gladly take it back for a full refund.
     <p>Full protection for every single part of your board.</p>
   </div>
   <div class="hrlines">
-    
+
   </div>
   <div class="guaranteeSection">
     <p class="sectionGTitle">Service &amp; Support</p>
