--- a/public/app/directives/navBar/navBar.html
+++ b/public/app/directives/navBar/navBar.html
@@ -9,7 +9,7 @@
     <span class="navLinks" ui-sref='payments'>ACCOUNT</span>
   </div>
   <div class="order">
-    <div class="cartPhoto">
+    <div ui-sref='cart' class="cartPhoto">
       <img class= 'photo' src="img/homePage/cart.PNG" alt="">
     </div>
     <button type="button" ui-sref='reserve' id='reserveButton'>RESERVE NOW</button>
