--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -6,7 +6,7 @@
             <p class="boardTitle">Love your ride</p>
             <p class="boardDesc">The Boosted board is designed from the ground up to drastically improve the urban transportation experience. Now with extended range.</p>
             <div class="boardButtonContainer">
-                <button type="button" class="orangeButton">RESERVE NOW</button>
+                <button type="button" ui-sref='reserve' class="orangeButton">RESERVE NOW</button>
                 <button type="button" ng-click='showvideo = !showvideo' class="whiteButton whiteButtonColor videoButton"><i class="fa fa-youtube-play" aria-hidden="true">
        </i> WATCH VIDEO</button>
                 <div class="videoPopup" ng-if='showvideo'>
