--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -2,8 +2,8 @@
     <div class="homeCoverInfo" ng-class='{fadeIn: fadeIn}'>
         <p class='homeCoverTitle'>Free your commute</p>
         <p class='homeCoverDesc'>Get around with incredible speed and ease on the most powerful electric skateboard.</p>
-        <button type="button" class="orangeButton">RESERVE NOW</button>
-        <button type="button" class="whiteButton whiteButtonColor">LEARN MORE</button>
+        <button type="button" ui-sref='reserve' class="orangeButton">RESERVE NOW</button>
+        <button type="button" ui-sref='board' class="whiteButton whiteButtonColor">LEARN MORE</button>
     </div>
 </div>
 <div class="homeOrangeMap">
@@ -18,7 +18,7 @@
             <p class='homeGrayTitle'>Your Whole city,</br> now within reach </p>
             <p class='homeGrayInfo'>With a range of up to 14 miles on a single charge, anywhere is just a short ride away. Zig zag through traffic, fly by public transit, and never wait for an Uber to arrive. With Boosted, you can forget endlessly circling the block for a parking
                 spot, and that faraway lunch spot–getting there is a breeze. Do more, see more. Your city is waiting.</p>
-            <button type="button" class="whiteButton" id='blueButton' name="button">Learn More</button>
+            <button type="button" ui-sref='board' class="whiteButton" id='blueButton' name="button">Learn More</button>
         </div>
     </div>
 </div>
@@ -137,8 +137,8 @@
             <div class="miniIcon"><img class='photo' src="../../img/homePage/phoneIcon.PNG" alt=""></div><span>IPHONE APP</span>
         </div>
         <div class="buttonContainer">
-            <button class='whiteButton shortButton blueButton' type="button" name="button">RESERVE NOW</button></br>
-            <button type="button" class='whiteButton whiteButtonColor shortButton' name="button">LEARN MORE</button>
+            <button class='whiteButton shortButton blueButton' ui-sref='reserve' type="button" name="button">RESERVE NOW</button></br>
+            <button type="button" ui-sref='board' class='whiteButton whiteButtonColor shortButton' name="button">LEARN MORE</button>
         </div>
     </div>
     <div class="rightHomeBoardInfo">
