--- a/public/app/routes/itempage/item.html
+++ b/public/app/routes/itempage/item.html
@@ -5,7 +5,7 @@
 <p class="itemTitle">{{item[0].itemname}}</p>
 <hr>
 <p class="itemPrice">{{item[0].price | currency}}</p>
-<button type="button"class='orangeButton noMargin' name="button">ADD TO CART</button>
+<button type="button"class='orangeButton noMargin' ng-click='addItem()' name="button">ADD TO CART</button>
 <p class="itemPrice">Description</p>
 <p>{{item[0].description}}</p>
 </div>
