--- a/public/app/routes/store/store.html
+++ b/public/app/routes/store/store.html
@@ -3,7 +3,7 @@
         <div class="coverPhotoContainer">
             <p class="storeTitle">2nd Gen Boosted Board</p>
             <p class="storeDesc">Increase your door-to-door speed with this powerful electric skateboard</p>
-            <button type="button" class='orangeButton' name="button">RESERVE NOW</button>
+            <button type="button" ui-sref='reserve' class='orangeButton' name="button">RESERVE NOW</button>
         </div>
     </div>
     <div class="genContain">
