another day another dollar

--- a/public/app/directives/help/help.html
+++ b/public/app/directives/help/help.html
@@ -9,7 +9,6 @@
       still deciding on a board or have been riding
       for 2 years, we’ve got your back. Visit our
       support page or give us a ring at (650) 933-5151.</p>
-      <button type="button" href='https://support.boostedboards.com/hc/en-us' class='whiteButton' id='blackButton'
-       name="button">VISIT SUPPORT</button>
+      <a href="https://support.boostedboards.com/hc/en-us"><button type="button"class='whiteButton' id='blackButton' name="button">VISIT SUPPORT</button></a>
   </div>
 </div>
