--- a/public/app/routes/cart/cart.html
+++ b/public/app/routes/cart/cart.html
@@ -20,15 +20,17 @@
         <p>{{item.itemname}}</p>
         <p ng-click='removeItem(item.itemid)'>remove</p>
       </div>
-      <p>{{item.price}}</p>
-      <p><input type="number" name="" value="{{item.qty}}"></p>
-      <p>{{item.price}}</p>
+      <p ng-model='price'>{{item.price}}</p>
+      <p><input ng-model='qty' type="number" ng-change='updateItem(item.itemid, qty)' value="{{item.qty}}"></p>
+      <p>{{item.price * item.qty | currency}}</p>
     </div>
   </div>
   </div>
   <hr>
   <div class="">
-    <p>Subtotal {{totalPrice}}</p>
+    <p>Subtotal {{totalPrice | currency}}</p>
+    <p>payments -{{paymentAmount | currency}}</p>
+    <p>Total {{totalPrice - paymentAmount | currency}}</p>
     <p>Shipping &amp; taxes calculated at checkout</p>
     <button type="button" ng-click='reloadRoute()' name="button">UPDATE CART</button>
     <button type="button" ui-sref='checkout' name="button">CHECK OUT</button>
