--- a/public/app/routes/reserveNow/reserve.html
+++ b/public/app/routes/reserveNow/reserve.html
@@ -14,6 +14,7 @@
 <button type="button" name="button">Standard</button>
 <hr>
 <a href="/auth"><button type="button" name="button">Make a Payment</button></a>
+<button type="button" name="button">Add to Cart</button>
 </div>
 </div>
 <div class="compareCover">
