--- a/public/app/routes/cart/cart.html
+++ b/public/app/routes/cart/cart.html
@@ -13,20 +13,21 @@
     <p>Total</p>
   </div>
   <hr>
-  <div class="itemsinCart">
+  <div class="itemsCart">
   <div class="" ng-repeat='item in items'>
     <div class="itemsinCart">
-      <div class="itemname">
-        <p>{{item.itemname}}</p>
-        <p ng-click='removeItem(item.itemid)'>remove</p>
+      <div class="iteminCart">
+        <div class="itemname">
+          <p>{{item.itemname}}</p>
+          <p ng-click='removeItem(item.itemid)'>remove</p>
+        </div>
+        <p ng-model='price'>{{item.price}}</p>
+        <p><input ng-model='qty' type="number" ng-change='updateItem(item.itemid, qty)' value="{{item.qty}}"></p>
+        <p>{{item.price * item.qty | currency}}</p>
       </div>
-      <p ng-model='price'>{{item.price}}</p>
-      <p><input ng-model='qty' type="number" ng-change='updateItem(item.itemid, qty)' value="{{item.qty}}"></p>
-      <p>{{item.price * item.qty | currency}}</p>
     </div>
   </div>
   </div>
-  <hr>
   <div class="">
     <p>Subtotal {{totalPrice | currency}}</p>
     <p>payments -{{paymentAmount | currency}}</p>
