--- a/public/app/routes/infoMethod/infomethod.html
+++ b/public/app/routes/infoMethod/infomethod.html
@@ -1,51 +1,111 @@
 <div class="leftCheckout">
 <p>Customer information</p>
 <div class="customerEmail">
-  <span>Email</span>
+  <span>Email</span><br>
   <input type="text" name="" value="">
 </div>
 <p>Shipping address</p>
 <div class="">
-  <div class="customerEmail">
-    <span>Email</span>
-    <input type="text" name="" value="">
-  </div>
-  <div class="customerFirstName">
-    <span>First name</span>
-    <input type="text" name="" value="">
-  </div>
-  <div class="customerLastName">
-    <span>Last name</span>
-    <input type="text" name="" value="">
+  <div class="nameLine">
+    <div class="customerFirstName">
+      <span>First name</span><br>
+      <input type="text" name="" value="">
+    </div>
+    <div class="customerLastName">
+      <span>Last name</span><br>
+      <input type="text" name="" value="">
+    </div>
   </div>
   <div class="customerCompany">
     <input type="text" placeholder='Company (optional)' name="" value="">
   </div>
-  <div class="customerAddress">
-    <span>Address</span>
-    <input type="text" name="" value="">
-  </div>
-  <div class="customerSuite">
-    <input type="text" placeholder='Apt, suite, etc. (optional)' name="" value="">
+  <div class="addressLine">
+    <div class="customerAddress">
+      <span>Address</span><br>
+      <input type="text" name="" value="">
+    </div>
+    <div class="customerSuite">
+      <input type="text" placeholder='Apt, suite, etc. (optional)' name="" value="">
+    </div>
   </div>
   <div class="customerCity">
-    <span>City</span>
+    <span>City</span><br>
     <input type="text" name="" value="">
   </div>
+<div class="locationLine">
   <div class="customerCountry">
-    <span>Country</span>
-    <input type="text" name="" value="">
+    <span>Country</span><br>
+    <select>
+	<option value="USA">United States</option>
+	<option value="CAN">Canada</option>
+	<option value="UK">United Kingdom</option>
+	<option value="AUS">Australia</option>
+</select>
   </div>
   <div class="customerState">
-    <span>State</span>
-    <input type="text" name="" value="">
+    <span>State</span><br>
+    <select>
+	<option value="AL">Alabama</option>
+	<option value="AK">Alaska</option>
+	<option value="AZ">Arizona</option>
+	<option value="AR">Arkansas</option>
+	<option value="CA">California</option>
+	<option value="CO">Colorado</option>
+	<option value="CT">Connecticut</option>
+	<option value="DE">Delaware</option>
+	<option value="DC">District Of Columbia</option>
+	<option value="FL">Florida</option>
+	<option value="GA">Georgia</option>
+	<option value="HI">Hawaii</option>
+	<option value="ID">Idaho</option>
+	<option value="IL">Illinois</option>
+	<option value="IN">Indiana</option>
+	<option value="IA">Iowa</option>
+	<option value="KS">Kansas</option>
+	<option value="KY">Kentucky</option>
+	<option value="LA">Louisiana</option>
+	<option value="ME">Maine</option>
+	<option value="MD">Maryland</option>
+	<option value="MA">Massachusetts</option>
+	<option value="MI">Michigan</option>
+	<option value="MN">Minnesota</option>
+	<option value="MS">Mississippi</option>
+	<option value="MO">Missouri</option>
+	<option value="MT">Montana</option>
+	<option value="NE">Nebraska</option>
+	<option value="NV">Nevada</option>
+	<option value="NH">New Hampshire</option>
+	<option value="NJ">New Jersey</option>
+	<option value="NM">New Mexico</option>
+	<option value="NY">New York</option>
+	<option value="NC">North Carolina</option>
+	<option value="ND">North Dakota</option>
+	<option value="OH">Ohio</option>
+	<option value="OK">Oklahoma</option>
+	<option value="OR">Oregon</option>
+	<option value="PA">Pennsylvania</option>
+	<option value="RI">Rhode Island</option>
+	<option value="SC">South Carolina</option>
+	<option value="SD">South Dakota</option>
+	<option value="TN">Tennessee</option>
+	<option value="TX">Texas</option>
+	<option value="UT">Utah</option>
+	<option value="VT">Vermont</option>
+	<option value="VA">Virginia</option>
+	<option value="WA">Washington</option>
+	<option value="WV">West Virginia</option>
+	<option value="WI">Wisconsin</option>
+	<option value="WY">Wyoming</option>
+</select>
   </div>
   <div class="customerZip">
-    <span>Email</span>
+    <span>Zip</span><br>
     <input type="text" name="" value="">
   </div>
+</div>
+
   <div class="customerPhone">
-    <span>Phone</span>
+    <span>Phone</span><br>
     <input type="text" name="" value="">
   </div>
   <p>Return to cart</p>
@@ -59,5 +119,5 @@
 </div>
 </div>
 <div class="rightCheckout">
-
+  
 </div>
