added google maps api

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-    <nav-bar></nav-bar>
 
     <ui-view></ui-view>
-
-    <footer-view></footer-view>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOznoEuNKgX_FJ8ptlpaMqClSbmjTndXQ&callback=initMap">
+    </script>
     <script src="https://js.stripe.com/v2/"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.0/jquery-migrate.js'></script>
