--- a/public/app/directives/navBar/navBar.html
+++ b/public/app/directives/navBar/navBar.html
@@ -13,7 +13,7 @@
     <div ui-sref='cart' class="cartPhoto">
       <img class= 'photo' src="img/homePage/cart.PNG" alt="">
     </div>
-    <button type="button" ui-sref='reserve' id='reserveButton'>RESERVE NOW</button>
+    <button type="button" ui-sref='reserve' id='reserveButton'>SHOP NOW</button>
   </div>
   <div class='navDrop'><img class = 'photo' src="img/homePage/hamburger.png" alt=""> </div>
 </div>
