--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="darkBackground" ng-click='showvideo = !showvideo' ng-show='showvideo'>
 </div>
 <section>
@@ -214,3 +215,4 @@
 </section>
 <help></help>
 <guarantee></guarantee>
+<footer-view></footer-view>
