--- a/public/app/routes/community/community.html
+++ b/public/app/routes/community/community.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="parentContainer">
 <div class='blogContainer' ng-repeat='blog in blogs'>
   <div class="bloginfo">
@@ -20,3 +21,4 @@
 </div>
 </div>
 </div>
+<footer-view></footer-view>
