--- a/public/app/routes/itempage/item.html
+++ b/public/app/routes/itempage/item.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div id='test'>
   <div id="itemContainer">
 <img class='itemPic' ng-src="../../img/store/{{item[0].image}}">
@@ -11,3 +12,4 @@
 </div>
 </div>
   </div>
+<footer-view></footer-view>
