--- a/public/app/routes/payments/payments.html
+++ b/public/app/routes/payments/payments.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="paymentTopHalf">
 <div class="userInfo">
 <img class="profilePic"src="{{user.profilepic}}" alt=""></br>
@@ -107,3 +108,4 @@
   </div>
   <button type="button" class='orangeButton' ng-click='addBoard()' name="button">Checkout</button>
 </div>
+<footer-view></footer-view>
