--- a/public/app/routes/reserveNow/reserve.html
+++ b/public/app/routes/reserveNow/reserve.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="reserveCover">
 <div class="boardStanding">
 
@@ -32,3 +33,4 @@
 <div class="shippingandInfo">
 
 </div>
+<footer-view></footer-view>
