--- a/public/app/routes/store/store.html
+++ b/public/app/routes/store/store.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div id='test'>
     <div class="storeCoverPhoto">
         <div class="coverPhotoContainer">
@@ -50,3 +51,4 @@
         </div>
     </section>
 </div>
+<footer-view></footer-view>
