--- a/public/app/routes/blogItem/blogitem.html
+++ b/public/app/routes/blogItem/blogitem.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="parentContainer">
 <div class='blogContainer'>
   <div class="bloginfo">
@@ -13,3 +14,4 @@
     </div>
 </div>
 </div>
+<footer-view></footer-view>
