--- a/public/app/routes/cart/cart.html
+++ b/public/app/routes/cart/cart.html
@@ -1,5 +1,6 @@
+<nav-bar></nav-bar>
 <div class="cartContainer">
-<h1>Shopping Cart</h1>
+<h1 class="shoppingTitle">Shopping Cart</h1>
 <div class="emptyCart" ng-show='emptyCart'>
 <p>You cart is currently empty.</p>
 <p>Continue Browsing <a ui-sref='store'>here</a></p>
@@ -7,7 +8,7 @@
 <div class="cartWithItems" ng-show='fullCart'>
   <hr>
   <div class="cartTitles">
-    <p>Product</p>
+    <p class="itemname">Product</p>
     <p>Price</p>
     <p>Quantity</p>
     <p>Total</p>
@@ -19,22 +20,23 @@
       <div class="iteminCart">
         <div class="itemname">
           <p>{{item.itemname}}</p>
-          <p ng-click='removeItem(item.itemid)'>remove</p>
+          <p ng-click='removeItem(item.itemid)' class='removeLink'>remove</p>
         </div>
-        <p ng-model='price'>{{item.price}}</p>
+        <p class= 'itemcartPrice' ng-model='price'>{{item.price | currency}}</p>
         <p><input ng-model='qty' type="number" ng-change='updateItem(item.itemid, qty)' value="{{item.qty}}"></p>
-        <p>{{item.price * item.qty | currency}}</p>
+        <p class= 'itemcartPrice'>{{item.price * item.qty | currency}}</p>
       </div>
     </div>
   </div>
   </div>
-  <div class="">
-    <p>Subtotal {{totalPrice | currency}}</p>
-    <p>payments -{{paymentAmount | currency}}</p>
-    <p>Total {{totalPrice - paymentAmount | currency}}</p>
+  <div class="cartTotals">
+    <p>Subtotal <span class= 'itemcartPrice'>{{totalPrice | currency}}</span></p>
+    <p>payments <span class= 'itemcartPrice'>-{{paymentAmount | currency}}</span></p>
+    <p>Total <span class= 'itemcartPrice'>{{totalPrice - paymentAmount | currency}}</span></p>
     <p>Shipping &amp; taxes calculated at checkout</p>
-    <button type="button" ng-click='reloadRoute()' name="button">UPDATE CART</button>
-    <button type="button" ui-sref='checkout' name="button">CHECK OUT</button>
+    <button type="button" ng-click='reloadRoute()' class='whiteButton' name="button">UPDATE CART</button>
+    <button type="button" ui-sref='checkout' class='orangeButton' id='noButtonMargin' name="button">CHECK OUT</button>
   </div>
 </div>
 </div>
+<footer-view></footer-view>
