--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -1,3 +1,4 @@
+<nav-bar></nav-bar>
 <div class="homeCover">
     <div class="homeCoverInfo" ng-class='{fadeIn: fadeIn}'>
         <p class='homeCoverTitle'>Free your commute</p>
@@ -247,3 +248,4 @@
     <div class="reserveFooter">
         RESERVE NOW
     </div>
+<footer-view></footer-view>
