--- a/public/app/routes/infoMethod/infomethod.html
+++ b/public/app/routes/infoMethod/infomethod.html
@@ -1,50 +1,56 @@
-<div class="leftCheckout">
-<p>Customer information</p>
-<div class="customerEmail">
-  <span>Email</span><br>
-  <input type="text" name="" value="">
-</div>
-<p>Shipping address</p>
-<div class="">
-  <div class="nameLine">
-    <div class="customerFirstName">
-      <span>First name</span><br>
-      <input type="text" name="" value="">
-    </div>
-    <div class="customerLastName">
-      <span>Last name</span><br>
-      <input type="text" name="" value="">
-    </div>
-  </div>
-  <div class="customerCompany">
-    <input type="text" placeholder='Company (optional)' name="" value="">
-  </div>
-  <div class="addressLine">
-    <div class="customerAddress">
-      <span>Address</span><br>
-      <input type="text" name="" value="">
-    </div>
-    <div class="customerSuite">
-      <input type="text" placeholder='Apt, suite, etc. (optional)' name="" value="">
-    </div>
-  </div>
-  <div class="customerCity">
-    <span>City</span><br>
-    <input type="text" name="" value="">
-  </div>
-<div class="locationLine">
-  <div class="customerCountry">
-    <span>Country</span><br>
-    <select>
+<div class="parentCheckout">
+    <div class="leftCheckout">
+        <div class="leftContentCheckout">
+          <div class="CheckoutBoostedLogo">
+            <img src="" alt="">
+            <span>Cart</span> &gt; <span>Customer information</span> &gt; <span>Payment method</span>
+          </div>
+            <p>Customer information</p>
+            <div class="customerEmail">
+                <span>Email</span><br>
+                <input type="text" name="" value="">
+            </div>
+            <p>Shipping address</p>
+            <div class="">
+                <div class="nameLine">
+                    <div class="customerFirstName">
+                        <span>First name</span><br>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="customerLastName">
+                        <span>Last name</span><br>
+                        <input type="text" name="" value="">
+                    </div>
+                </div>
+                <div class="customerCompany">
+                    <input type="text" placeholder='Company (optional)' name="" value="">
+                </div>
+                <div class="addressLine">
+                    <div class="customerAddress">
+                        <span>Address</span><br>
+                        <input type="text" name="" value="">
+                    </div>
+                    <div class="customerSuite">
+                        <input type="text" placeholder='Apt, suite, etc. (optional)' name="" value="">
+                    </div>
+                </div>
+                <div class="customerCity">
+                    <span>City</span><br>
+                    <input type="text" name="" value="">
+                </div>
+                <div class="locationLine">
+                    <div class="customerCountry">
+                        <span>Country</span><br>
+                        <select>
 	<option value="USA">United States</option>
 	<option value="CAN">Canada</option>
 	<option value="UK">United Kingdom</option>
 	<option value="AUS">Australia</option>
 </select>
-  </div>
-  <div class="customerState">
-    <span>State</span><br>
-    <select>
+                    </div>
+                    <div class="customerState">
+                        <span>State</span><br>
+                        <select>
 	<option value="AL">Alabama</option>
 	<option value="AK">Alaska</option>
 	<option value="AZ">Arizona</option>
@@ -97,27 +103,30 @@
 	<option value="WI">Wisconsin</option>
 	<option value="WY">Wyoming</option>
 </select>
-  </div>
-  <div class="customerZip">
-    <span>Zip</span><br>
-    <input type="text" name="" value="">
-  </div>
-</div>
+                    </div>
+                    <div class="customerZip">
+                        <span>Zip</span><br>
+                        <input type="text" name="" value="">
+                    </div>
+                </div>
 
-  <div class="customerPhone">
-    <span>Phone</span><br>
-    <input type="text" name="" value="">
-  </div>
-  <p>Return to cart</p>
-  <button type="button" name="button">Continue to payment method</button>
-</hr>
-<div class="">
-  <p>Privacy policy</p>
-  <p>Refund policy</p>
-  <p>Terms of service</p>
-</div>
-</div>
-</div>
-<div class="rightCheckout">
-  
+                <div class="customerPhone">
+                    <span>Phone</span><br>
+                    <input type="text" name="" value="">
+                </div>
+                <a ui-sref="cart">
+                    <p>Return to cart</p>
+                </a>
+                <button type="button" ui-sref='payment' name="button">Continue to payment method</button>
+                <div class="extraLinks">
+                    <p>Privacy policy</p>
+                    <p>Refund policy</p>
+                    <p>Terms of service</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="rightCheckout">
+        <checkout-cart></checkout-cart>
+    </div>
 </div>
