--- a/public/app/routes/paymentmethod/paymentmethod.html
+++ b/public/app/routes/paymentmethod/paymentmethod.html
@@ -1,6 +1,86 @@
-<div class="leftPaymentdiv">
 
+<div class="parentPayment">
+
+<div class="leftPaymentdiv">
+  <p>Payment method</p>
+  <p>All transactions are secure and encrypted.</p>
+  <div class="stripe payment">
+    <div class="paymentInfo">
+      <form ng-submit='charge(payment)' class='col-xs-4'>
+          <h2 class="stripeTitle">Make a payment</h2><br>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <input
+              class='form-control'
+              type="text"
+              name=""
+              ng-model='mockPrice'
+              placeholder="amount"
+              required>
+            </div>
+          </section>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <label>Card number:</label>
+              <input
+              class='form-control'
+              ng-model="payment.card.number"
+              type="text"
+              placeholder="card"
+              required>
+            </div>
+          </section>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <label>Name on card:</label>
+              <input
+              type="text"
+              name="name"
+              class='form-control'
+              placeholder='name'
+              required>
+            </div>
+          </section>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <label>Exp. Mo</label>
+              <input
+              class='form-control'
+              ng-model="payment.card.exp_month"
+              type="text"
+              name="name"
+              placeholder="MM">
+            </div>
+          </section>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <label>Exp. Yr</label>
+              <input
+              class='form-control'
+              ng-model="payment.card.exp_year"
+              type="text"
+              name="name"
+              placeholder="YY">
+            </div>
+          </section>
+          <section class='form-group'>
+            <div class="stripeInput">
+              <label>CVC:</label>
+              <input
+              class='form-control'
+              ng-model="payment.card.cvc"
+              placeholder='CVC number'
+              type="text"
+              required>
+            </div>
+          </section>
+          <button class='btn btn-primary whiteButton' type='sumbit'>Complete order</button>
+      </form>
+    </div>
+  </div>
 </div>
 <div class="rightPaymentdiv">
-
+  <checkout-cart></checkout-cart>
 </div>
+</div>
+<button type="button" ui-sref='confirmation' name="button">test</button>
