did more css work

--- a/public/app/routes/reserveNow/reserve.html
+++ b/public/app/routes/reserveNow/reserve.html
@@ -1,28 +1,91 @@
 <nav-bar></nav-bar>
 <div class="reserveCover">
 <div class="boardStanding">
-
+<img src="../../img/reserveNow/dual.PNG" alt="">
 </div>
 <div class="rightReserveOptions">
-<p>2nd Gen Boosted Board</p>
-<hr>
-<span>Power</span> <span>+Compare Specs</span>
-<button type="button" name="button">Dual+ $1499</button>
-<button type="button" name="button">Dual $1299</button>
-<hr>
-<span>Battery</span> <span>+Compare Batteries</span>
-<button type="button" name="button">Extended +$100</button>
-<button type="button" name="button">Standard</button>
-<hr>
-<a href="/auth"><button type="button" name="button">Make a Payment</button></a>
-<button type="button" name="button">Add to Cart</button>
+<p class='reserveCoverTitle'>2nd Gen Boosted Board</p>
+<div class="borderTopSection">
+  <div class="sameLine">
+    <div class="buttonSectionTitle">Power</div> <div class="buttonSectionTitle">+Compare Specs</div>
+  </div>
+  <button type="button" class='whiteButton' name="button">Dual+ $1499</button>
+  <button type="button" class='whiteButton' name="button">Dual $1299</button>
+</div>
+<div class="borderTopSection">
+  <div class="sameLine">
+    <div class="buttonSectionTitle">Battery</div><div class="buttonSectionTitle">+Compare Batteries</div><br>
+  </div>
+  <button type="button" class='whiteButton' name="button">Extended +$100</button>
+  <button type="button" class='whiteButton' name="button">Standard</button>
+</div>
+<div class="borderTopSection" id='heightFix'>
+  <a href="/auth"><button type="button" class='whiteButton' name="button">Make a Payment</button></a>
+  <button type="button" class='whiteButton' name="button">Add to Cart</button>
+</div>
+<div class="3reserveIcons">
+  <img src="../../img/reserveNow/icon-shipping.png" alt="">
+  <img src="../../img/reserveNow/icon-calendar.png" alt="">
+  <img src="../../img/reserveNow/icon-warranty.png" alt="">
+</div>
 </div>
 </div>
 <div class="compareCover">
-
+  <div class="compareCoverPosition">
+    <p class="compareTitle">Compare Specs</p>
+    <div class="compareCoverContent">
+      <div class="DualPlusContainer">
+        <img class='boardPhotoSize' src="../../img/reserveNow/dual.PNG" alt="">
+        <div class="infoSectionReserve">
+          <div class="compareSectionTitles">
+            <span class="title">Dual+</span><br>
+            <span>Starting at $1499</span>
+          </div>
+          <div class="compareSectionDesc">
+            <span>2,000 watts of power</span><br>
+            <span>22 mph top speed</span><br>
+            <span>Climbs 25% grade hills</span><br>
+            <span>7 mile range with Standard Battery</span><br>
+            <span>12 mile range with Extended Battery</span><br>
+            <span>Extra traction grip tape</span><br>
+            <span>14.7-15.5 lbs</span><br>
+            <span>(depending on battery type)</span><br>
+          </div>
+        </div>
+      </div>
+    <div class="DualContainer">
+      <img class='boardPhotoSize' src="../../img/reserveNow/dual.PNG" alt="">
+      <div class="infoSectionReserve">
+        <div class="compareSectionTitles">
+          <span class="title">Dual</span><br>
+          <span>Starting at $1299</span>
+        </div>
+        <div class="compareSectionDesc">
+          <span>1,500 watts of power</span><br>
+          <span>20 mph top speed</span><br>
+          <span>Climbs 20% grade hills</span><br>
+          <span>7 mile range with Standard Battery</span><br>
+          <span>12 mile range with Extended Battery</span><br>
+          <span>Standard grip tape</span><br>
+          <span>14.7-15.5 lbs</span><br>
+          <span>(depending on battery type)</span><br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 <div class="compareBatteries">
+<div class="contentSize">
+  <div class="content">
+    <div class="leftContent">
+      
+    </div>
+    <div class="rightContent">
 
+    </div>
+  </div>
+</div>
 </div>
 <div class="features">
 
