--- a/public/app/directives/navBar/navBar.html
+++ b/public/app/directives/navBar/navBar.html
@@ -10,8 +10,11 @@
     <a class='fixheight' href="/auth"><span class="navLinks" ng-hide='account'>LOGIN</span></a>
   </div>
   <div class="order">
-    <div ui-sref='cart' class="cartPhoto">
+    <div ng-show='account' ui-sref='cart' class="cartPhoto">
       <img class= 'photo' src="img/homePage/cart.PNG" alt="">
+    </div>
+    <div ng-hide='account' class="cartPhoto">
+      <a href="/auth"><img class= 'photo' src="img/homePage/cart.PNG" alt=""></a>
     </div>
     <button type="button" ui-sref='reserve' id='reserveButton'>SHOP NOW</button>
   </div>
@@ -22,6 +25,7 @@
     <li ui-sref='board'>THE BOARD</li>
     <li ui-sref='store'>STORE</li>
     <li ui-sref='community'>COMMUNITY</li>
-    <li ui-sref='payments'>ACCOUNT</li>
+    <li ui-sref='payments' ng-show='account' >ACCOUNT</li>
+    <a href="/auth"><li ng-hide='account'>LOGIN</li></a>
   </ul>
 </div>
