--- a/public/app/routes/paymentmethod/paymentmethod.html
+++ b/public/app/routes/paymentmethod/paymentmethod.html
@@ -8,7 +8,7 @@
     <div class="paymentInfo">
       <form ng-submit='charge(payment)' class='col-xs-4'>
           <h2 class="stripeTitle">Make a payment</h2><br>
-          <section class='form-group'>
+          <!-- <section class='form-group'>
             <div class="stripeInput">
               <input
               class='form-control'
@@ -18,7 +18,7 @@
               placeholder="amount"
               required>
             </div>
-          </section>
+          </section> -->
           <section class='form-group'>
             <div class="stripeInput">
               <label>Card number:</label>
@@ -80,7 +80,8 @@
   </div>
 </div>
 <div class="rightPaymentdiv">
-  <checkout-cart></checkout-cart>
+  <checkout-cart total = 'total'></checkout-cart>
+  {{totalDue}}{{total}}{{paymentAmount}}
 </div>
 </div>
 <button type="button" ui-sref='confirmation' name="button">test</button>
